--- a/StartToDo/GoogleService-Info.plist
+++ b/StartToDo/GoogleService-Info.plist
@@ -19,16 +19,18 @@
 	<key>STORAGE_BUCKET</key>
 	<string>starttodo-32068.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:170412506291:ios:8a3d02d973fac89e7d44c6</string>
+	<key>DATABASE_URL</key>
+	<string>https://starttodo-32068-default-rtdb.firebaseio.com/</string>
 </dict>
 </plist>
